# poulpy

./: CHANGELOG.md  Cargo.toml  README.md
docs/: ntt120-backend.md
poulpy-bench/: Cargo.toml
poulpy-bench/benches/: ckks_add.rs  ckks_automorphism.rs  ckks_composite.rs  ckks_mul.rs  ckks_sub.rs  ckks_unary.rs  external_product.rs  glwe_tensor.rs  operations.rs  standard.rs  svp.rs  vec_znx.rs  vec_znx_big.rs  vec_znx_dft.rs
poulpy-bench/src/: lib.rs
poulpy-bench/src/bench_suite/: ckks.rs  mod.rs
poulpy-bench/src/bench_suite/core/: external_product.rs  glwe_tensor.rs  operations.rs
poulpy-bench/src/bench_suite/hal/: svp.rs  vec_znx_big.rs  vec_znx_dft.rs
poulpy-bench/src/bench_suite/hal/vec_znx/: automorphism.rs  mod.rs  mul_xp_minus_one.rs  negate.rs  normalize.rs  rotate.rs  shift.rs  sub.rs
poulpy-bench/src/bench_suite/schemes/: circuit_bootstrapping.rs
poulpy-ckks/: Cargo.toml  README.md
poulpy-ckks/examples/: poly2.rs
poulpy-ckks/src/: error.rs  lib.rs
poulpy-ckks/src/encoding/: mod.rs
poulpy-ckks/src/layouts/: ciphertext.rs  mod.rs
poulpy-ckks/src/layouts/plaintext/: cst.rs  mod.rs  vec.rs
poulpy-ckks/src/leveled/: mod.rs
poulpy-ckks/src/leveled/api/: add.rs  composite.rs  conjugate.rs  encryption.rs  mod.rs  mul.rs  neg.rs  pow2.rs  pt_znx.rs  rescale.rs  rotate.rs  sub.rs  tmp_bytes.rs
poulpy-ckks/src/leveled/default/: add.rs  conjugate.rs  mod.rs  mul.rs  neg.rs  pow2.rs  pt_znx.rs  rescale.rs  rotate.rs  sub.rs
poulpy-ckks/src/leveled/delegates/: add.rs  composite.rs  conjugate.rs  encryption.rs  mod.rs  mul.rs  neg.rs  pow2.rs  pt_znx.rs  rescale.rs  rotate.rs  sub.rs  tmp_bytes.rs
poulpy-ckks/src/leveled/oep/: add.rs  conjugate.rs  mod.rs  mul.rs  neg.rs  pow2.rs  pt_znx.rs  rotate.rs  sub.rs
poulpy-ckks/src/leveled/tests/: fft64_ref.rs  mod.rs  ntt120_ref.rs
poulpy-ckks/src/leveled/tests/test_suite/: add.rs  add_many.rs  add_unsafe.rs  composition.rs  conjugate.rs  dot_product.rs  encryption.rs  errors.rs  helpers.rs  mod.rs  mul.rs  mul_add.rs  mul_many.rs  mul_pow2.rs  mul_sub.rs  neg.rs  rotate.rs  sub.rs  sub_unsafe.rs
poulpy-ckks/src/oep/: add.rs  ckks_impl.rs  conjugate.rs  mod.rs  mul.rs  neg.rs  pow2.rs  pt_znx.rs  rotate.rs  sub.rs
poulpy-core/src/: error.rs  glwe_packer.rs  glwe_packing.rs  glwe_trace.rs  utils.rs
poulpy-core/src/api/: automorphism.rs  external_product.rs  keyswitching.rs  operations.rs
poulpy-core/src/automorphism/: gglwe_atk.rs  ggsw_ct.rs  glwe_ct.rs
poulpy-core/src/decryption/: glwe.rs
poulpy-core/src/delegates/: automorphism.rs  external_product.rs  keyswitching.rs  operations.rs
poulpy-core/src/encryption/: gglwe.rs  ggsw.rs  glwe.rs  glwe_to_lwe_key.rs  lwe.rs  lwe_switching_key.rs  lwe_to_glwe_key.rs
poulpy-core/src/external_product/: gglwe.rs  ggsw.rs  glwe.rs
poulpy-core/src/keyswitching/: gglwe.rs  ggsw.rs  glwe.rs
poulpy-core/src/noise/: ggsw.rs  glwe.rs
poulpy-core/src/oep/: automorphism.rs  core_impl.rs  external_product.rs  keyswitching.rs  operations.rs
poulpy-core/src/operations/: ggsw.rs  glwe.rs
poulpy-core/src/test_suite/: glwe_packer.rs  glwe_packing.rs  glwe_tensor.rs  mod.rs  trace.rs
poulpy-cpu-avx/examples/: rlwe_encrypt.rs
poulpy-cpu-avx/src/fft64/: module.rs  tests.rs
poulpy-cpu-avx/src/hal_impl/: vec_znx_big_fft64.rs  vec_znx_dft_ntt120.rs
poulpy-cpu-avx/src/ntt120/: prim.rs  tests.rs  vec_znx_big.rs  vec_znx_big_avx.rs  znx.rs
poulpy-cpu-avx/src/znx_avx/: add.rs  mul.rs  neg.rs  normalization.rs  sub.rs
poulpy-cpu-ref/examples/: core_encryption.rs
poulpy-cpu-ref/src/: tests.rs
poulpy-cpu-ref/src/fft64/: znx.rs
poulpy-cpu-ref/src/ntt120/: prim.rs  (+1 more)
poulpy-schemes/examples/: circuit_bootstrapping.rs  max_array.rs
(+79 files in other folders)
